UsfbUtility.php template change for button names and address pop up button color fix for legibility

--- a/web/themes/custom/myusf/sass/src/partials/_buttons.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_buttons.scss
@@ -29,6 +29,9 @@ span.diamond_link {
 .button.turquoise {
     @include button($turquoise);
 }
+.button.yellow {
+    @include button($yellow);
+}
 
 // SOCIAL MEDIA BUTTONS with text
 
